<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Main2Activity"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <Button
        android:id="@+id/buttonInv"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/inventar"
        android:textColor="@color/white"
        android:layout_marginTop="200dp"
        android:layout_marginBottom="10dp"
        android:background="@color/colorPrimary"
        />
    <Button
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:id="@+id/buttonAbout"
        android:text="@string/about"
        android:textColor="@color/white"
        android:layout_marginBottom="10dp"
        android:background="@color/colorPrimary" />

    <Button
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:id="@+id/buttonRating"
        android:text="@string/feedback"
        android:layout_marginBottom="10dp"
        android:textColor="@color/white"
        android:background="@color/colorPrimary" />
    <Button
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:id="@+id/buttonReparatii"
        android:text="@string/contact_firme_pentru_reparatii"
        android:layout_marginBottom="10dp"
        android:textColor="@color/white"
        android:background="@color/colorPrimary" />

    <Button
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:id="@+id/buttonStatistici"
        android:text="@string/statistici"
        android:layout_marginBottom="10dp"
        android:textColor="@color/white"
        android:background="@color/colorPrimary" />

    <Button
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:id="@+id/buttonRaport1"
        android:text="@string/raport_1"
        android:textColor="@color/white"
        android:layout_marginBottom="10dp"
        android:background="@color/colorPrimary" />
    <Button
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:id="@+id/buttonRaport2"
        android:text="@string/raport_2"
        android:textColor="@color/white"
        android:layout_marginBottom="10dp"
        android:background="@color/colorPrimary" />
</LinearLayout>