<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Inregistrare"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@color/colorPrimary">

    <TextView
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_marginTop="70dp"
        android:text="@string/creaza_un_cont_nou"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="@color/white"/>


    <EditText
        android:id="@+id/ET_nume"
        android:layout_width="160dp"
        android:layout_height="40dp"
        android:layout_marginTop="90dp"
        android:hint="@string/nume"
        android:drawableLeft="@drawable/ic_person_white_24dp" />

    <EditText
        android:id="@+id/ET_prenume"
        android:layout_width="160dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:hint="@string/prenume"
        android:drawableLeft="@drawable/ic_person_white_24dp" />

    <EditText
        android:id="@+id/ET_email"
        android:layout_width="160dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:hint="@string/email"
        android:drawableLeft="@drawable/ic_mail_white_24dp"/>

    <EditText
        android:id="@+id/ET_passwd"
        android:layout_width="160dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:hint="@string/parola"
        android:drawableLeft="@drawable/ic_pass"
        android:inputType="textPassword"/>



    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="70dp">

        <Button
            android:id="@+id/BTN_register"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/inregistrare"
            android:background="@color/design_default_color_surface"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/renunta"
            android:background="@color/design_default_color_surface"
            android:layout_marginLeft="20dp"
            android:onClick="renunta"/>

    </LinearLayout>

</LinearLayout>