<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@color/colorPrimary">
    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="100dp"
        android:layout_height="50dp"
        app:srcCompat="@drawable/ic_log"
        android:layout_marginTop="200dp"/>

    <EditText
        android:id="@+id/ET_mailLogin"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:hint="@string/email"/>

    <EditText
        android:id="@+id/ET_parolaLogin"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="30dp"
        android:hint="@string/parola"
        android:inputType="textPassword"/>
    <Button
        android:id="@+id/BTN_login"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_marginTop="70dp"
        android:text="@string/login"
        android:background="@color/white"/>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/nu_ai_cont"
            android:textColor="@color/white"/>
        <TextView
            android:id="@+id/TW_inregistrare"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:paddingLeft="20dp"
            android:textStyle="bold"
            android:text="@string/inregistreza_te"
            android:textColor="@color/white"/>

    </LinearLayout>


</LinearLayout>