<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Feedback"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginTop="70dp"
        android:src="@drawable/iconmain"/>
    <TextView
        android:id="@+id/textView"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:gravity="center"
        android:layout_marginTop="50dp"
        android:text="@string/ce_parere_aveti_despre_aplicatie"
        android:textStyle="bold|italic"
        android:fontFamily="serif"
        android:textSize="18sp"
        android:textColor="@color/colorPrimary"/>

    <EditText
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="30dp"
        android:hint="@string/nume_si_prenume"
        android:id="@+id/ET_nume"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:drawableLeft="@drawable/ic_person_black_24dp"
        android:fontFamily="serif"
        />
    <EditText
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:id="@+id/ET_feedback"
        android:hint="@string/feedback"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="30dp"
        android:fontFamily="serif"/>

    <RatingBar
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:id="@+id/RB_star"
        android:numStars="5"
        android:stepSize="0.5"
        android:layout_marginTop="30dp"/>
    <Button
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:id="@+id/BTN_trimite"
        android:layout_marginTop="50dp"
        android:text="@string/trimite"
        android:textColor="@color/white"
        android:background="@color/colorPrimary"/>




</LinearLayout>